--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "re-bundle-android": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle",
+    "re-bundle-assets-android": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+    "android": "npx react-native run-android",
+    "ios": "npx react-native run-ios",
+    "test-dl-android": "npx uri-scheme open musalanews://news/details/4 --android",
+    "test-dl-ios": "npx uri-scheme open musalanews://news/details/4 --ios"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.14",
