--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "android": "npx react-native run-android",
     "ios": "npx react-native run-ios",
     "test-dl-android": "npx uri-scheme open musalanews://news/details/4 --android",
-    "test-dl-ios": "npx uri-scheme open musalanews://news/details/4 --ios"
+    "test-dl-ios": "npx uri-scheme open musalanews://news/details/4 --ios",
+    "setup": "rm -rf node_modules && npm i && cd ios && pod install"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.14",
